--- a/src/main/resources/webapp/thymeleaf_hello_world.html
+++ b/src/main/resources/webapp/thymeleaf_hello_world.html
@@ -5,7 +5,11 @@
 </head>
 <body>
     <h1 th:text="${message}">Default Message</h1>
-    
+    <div>
+    <p>User ID: <span th:text="${user.Id}"></span></p>
+    <p>User Name: <span th:text="${user.name}"></span></p>
+    <p>User Email: <span th:text="${user.email}"></span></p>
+</div>
     <div>
       
     </div>
