--- a/src/main/resources/webapp/login.html
+++ b/src/main/resources/webapp/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div class="container mt-5">
+<div class="container mt-5" th:fragment="content">
   <div class="row justify-content-center">
     <div class="col-md-6">
       <div class="card">
@@ -16,19 +16,19 @@
           <h3 class="text-center">Login</h3>
         </div>
         <div class="card-body">
-          <form id="loginForm">
+          <form th:action="@{/login}" th:object="${loginForm}" method="post">
             <div class="mb-3">
               <label for="username" class="form-label">Username:</label>
-              <input type="text" class="form-control" id="username" required>
+              <input type="text" class="form-control" th:field="*{username}" required>
             </div>
 
             <div class="mb-3">
               <label for="password" class="form-label">Password:</label>
-              <input type="password" class="form-control" id="password" required>
+              <input type="password" class="form-control" th:field="*{password}" required>
             </div>
 
             <div class="text-center">
-              <button type="button" class="btn btn-primary" onclick="login()">Login</button>
+              <button type="submit" class="btn btn-primary">Login</button>
             </div>
           </form>
         </div>
@@ -38,20 +38,6 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-<script>
-function login() {
-
-  var username = document.getElementById('username').value;
-  var password = document.getElementById('password').value;
-
-  if (username === 'example' && password === 'password') {
-    alert('Login successful!');
-  } else {
-    alert('Login failed. Please check your username and password.');
-  }
-}
-</script>
 
 </body>
 </html>
