--- a/src/main/resources/webapp/login.html
+++ b/src/main/resources/webapp/login.html
@@ -16,10 +16,10 @@
           <h3 class="text-center">Login</h3>
         </div>
         <div class="card-body">
-          <form th:action="@{/login}" th:object="${loginForm}" method="post">
+          <form th:action="@{/login}" th:object="${loginForm}" method="post" onsubmit="return handleLogin()">
             <div class="mb-3">
-              <label for="username" class="form-label">Username:</label>
-              <input type="text" class="form-control" th:field="*{username}" required>
+              <label for="userEmail" class="form-label">Email:</label>
+              <input type="text" class="form-control" th:field="*{userEmail}" required>
             </div>
 
             <div class="mb-3">
@@ -38,6 +38,32 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+<script>
+  
+  function handleLogin() {
+    window.location.href = 'index.html';
+    return false; 
+  } 
+  
+  function handleLogin() {
+    const userEmail = document.getElementById('userEmail').value;
+    localStorage.setItem('userEmail', userEmail);
+    window.location.href = 'index.html';
+    return false;
+  }
+
+</script>
+
+<!-- <script th:inline="javascript">
+  var user = /*[[${user}]]*/ {};
+  
+  function handleLogin() {
+    localStorage.setItem('user', JSON.stringify(user));
+    window.location.href = 'index.html';
+    return false; //
+  }
+</script> -->
 
 </body>
 </html>
