modify(dev):modify web html

--- a/src/main/resources/webapp/login.html
+++ b/src/main/resources/webapp/login.html
@@ -46,12 +46,12 @@
     return false; 
   } 
   
-  function handleLogin() {
-    const userEmail = document.getElementById('userEmail').value;
-    localStorage.setItem('userEmail', userEmail);
-    window.location.href = 'index.html';
-    return false;
-  }
+  // function handleLogin() {
+  //   const userEmail = document.getElementById('userEmail').value;
+  //   localStorage.setItem('userEmail', userEmail);
+  //   window.location.href = 'index.html';
+  //   return false;
+  // }
 
 </script>
 
