--- a/src/main/resources/webapp/login.html
+++ b/src/main/resources/webapp/login.html
@@ -1,57 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login Page</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <title>Login Page</title>
 </head>
 <body>
 
-<div class="container mt-5">
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <div class="card">
-        <div class="card-header">
-          <h3 class="text-center">Login</h3>
-        </div>
-        <div class="card-body">
-          <form id="loginForm">
-            <div class="mb-3">
-              <label for="username" class="form-label">Username:</label>
-              <input type="text" class="form-control" id="username" required>
-            </div>
+    <h2>Login</h2>
 
-            <div class="mb-3">
-              <label for="password" class="form-label">Password:</label>
-              <input type="password" class="form-control" id="password" required>
-            </div>
+    <form th:action="@{/api/user-login}" method="post">
+        
+        <label for="userEmail">Email:</label>
+        <input type="text" id="userEmail" name="userEmail" required="required" />
 
-            <div class="text-center">
-              <button type="button" class="btn btn-primary" onclick="login()">Login</button>
-            </div>
-          </form>
-        </div>
-      </div>
+        <br />
+
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required="required" />
+
+        <br />
+
+        <button type="submit">Login</button>
+    </form>
+
+    <div th:if="${status == 'error'}" style="color: red;">
+        <p th:text="${desc}"></p>
     </div>
-  </div>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-<script>
-function login() {
-
-  var username = document.getElementById('username').value;
-  var password = document.getElementById('password').value;
-
-  if (username === 'example' && password === 'password') {
-    alert('Login successful!');
-  } else {
-    alert('Login failed. Please check your username and password.');
-  }
-}
-</script>
 
 </body>
 </html>
