modify(dev):modify web html

--- a/src/main/resources/webapp/box-order.html
+++ b/src/main/resources/webapp/box-order.html
@@ -9,18 +9,20 @@
 <body>
 
 <div class="container mt-5" th:fragment="content">
-  <h2 class="mb-4">Box Detail</h2>
+  <h2 class="mb-4">Box Order</h2>
 
   <!-- 表單開始 -->
   <form action="#" method="post" th:object="${box}" th:action="@{/box/update}">
     <div class="mb-3">
       <label for="name" class="form-label">名稱:</label>
-      <input type="text" class="form-control" id="name" th:field="*{name}" required>
+      <!-- 使用 type="hidden" 讓名稱不可修改 -->
+      <input type="hidden" class="form-control" id="name" th:field="*{name}" required>
+      <!-- 顯示名稱的文字，用於提示使用者 -->
+      <p class="form-control-static" th:text="*{name}"></p>
     </div>
 
     <div class="mb-3">
       <label for="location" class="form-label">地點:</label>
-      <!-- 下拉式選單 -->
       <select class="form-select" id="location" th:field="*{location}" required>
         <option value="台北車站">台北車站</option>
         <option value="新竹車站">新竹車站</option>
@@ -41,7 +43,6 @@
 
     <div class="mb-3">
       <label for="receiver" class="form-label">取貨方:</label>
-      <!-- 下拉式選單，迭代後端提供的使用者清單 -->
       <select class="form-select" id="receiver" th:field="*{receiver}" required>
         <option th:each="user : ${users}" th:if="${user.role == 'receiver'}" th:value="${user.id}" th:text="${user.name}"></option>
       </select>
