--- a/src/main/resources/webapp/order-list.html
+++ b/src/main/resources/webapp/order-list.html
@@ -83,9 +83,9 @@
   </div>
 </div>
 
-<div class="container mb-5 text-center">
+<!-- <div class="container mb-5 text-center">
     <a href="index.html" class="btn btn-primary">返回首頁</a>
-</div>
+</div> -->
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
