--- a/src/main/resources/webapp/login.html
+++ b/src/main/resources/webapp/login.html
@@ -16,15 +16,15 @@
           <h3 class="text-center">Login</h3>
         </div>
         <div class="card-body">
-          <form th:action="@{/login}" th:object="${loginForm}" method="post" onsubmit="return handleLogin()">
+          <form th:action="@{/api/user-login}"  method="post">
             <div class="mb-3">
               <label for="userEmail" class="form-label">Email:</label>
-              <input type="text" class="form-control" th:field="*{userEmail}" required>
+              <input type="text" id="username" name="userEmail" class="form-control" required>
             </div>
 
             <div class="mb-3">
               <label for="password" class="form-label">Password:</label>
-              <input type="password" class="form-control" th:field="*{password}" required>
+              <input type="password" id="password" name="password" class="form-control"  required>
             </div>
 
             <div class="text-center">
@@ -41,11 +41,11 @@
 
 <script>
   
-  function handleLogin() {
+/*   function handleLogin() {
     window.location.href = 'index.html';
     return false; 
   } 
-  
+   */
   // function handleLogin() {
   //   const userEmail = document.getElementById('userEmail').value;
   //   localStorage.setItem('userEmail', userEmail);
