--- a/src/main/resources/webapp/order-list.html
+++ b/src/main/resources/webapp/order-list.html
@@ -32,11 +32,11 @@
       <tbody>
         <!-- Thymeleaf loop to generate order box list -->
         <tr th:each="orderBox : ${orderBoxList}">
-          <td th:text="${orderBox.name}">中正大學工學院BOX</td>
-          <td th:text="${orderBox.location}">中正大學工學院</td>
-          <td th:text="${orderBox.supplierEmail}">user-A@example.com</td>
-          <td th:text="${orderBox.recipientEmail}">user-b@example.com</td>
-          <td th:text="${orderBox.status}">貨物放置中</td>
+          <td th:text="${orderBox.name}"></td>
+          <td th:text="${orderBox.location}"></td>
+          <td th:text="${orderBox.supplierEmail}"></td>
+          <td th:text="${orderBox.recipientEmail}"></td>
+          <td th:text="${orderBox.status}"></td>
           <td>
             <!-- Button or actions -->
             <button type="button" class="btn btn-primary" onclick="confirmActionSend('${orderBox.id}', '${orderBox.name}', '${orderBox.location}', '${orderBox.status}', '${orderBox.supplierEmail}', '${orderBox.recipientEmail}')">取貨完成</button>
@@ -68,11 +68,11 @@
       <tbody>
         <!-- Thymeleaf loop to generate order box list -->
         <tr th:each="orderBox : ${orderBoxList}">
-          <td th:text="${orderBox.name}">中正大學工學院 BOX</td>
-          <td th:text="${orderBox.location}">中正大學工學院</td>
-          <td th:text="${orderBox.supplierEmail}">user-A@example.com</td>
-          <td th:text="${orderBox.recipientEmail}">user-B@example.com</td>
-          <td th:text="${orderBox.status}">貨物放置中</td>
+          <td th:text="${orderBox.name}"></td>
+          <td th:text="${orderBox.location}"></td>
+          <td th:text="${orderBox.supplierEmail}"></td>
+          <td th:text="${orderBox.recipientEmail}"></td>
+          <td th:text="${orderBox.status}"></td>
           <td>
             <!-- Button or actions -->
             <button type="button" class="btn btn-primary" onclick="confirmActionReceiver('${orderBox.id}', '${orderBox.name}', '${orderBox.location}', '${orderBox.status}', '${orderBox.supplierEmail}', '${orderBox.recipientEmail}')">取貨完成</button>
@@ -103,7 +103,6 @@
         recipientEmail: recipientEmail
       };
 
-     
       fetch('/your-backend-endpoint', {
         method: 'POST',
         headers: {
@@ -125,7 +124,6 @@
     }
   }
 
-
   function confirmActionReceiver(id, name, location, status, supplierEmail, recipientEmail) {
     // Show a confirmation dialog
     if (confirm('確認要取貨嗎？')) {
@@ -139,7 +137,6 @@
         recipientEmail: recipientEmail
       };
 
-     
       fetch('/your-backend-endpoint', {
         method: 'POST',
         headers: {
