modify html file

--- a/src/main/resources/webapp/box-mapall.html
+++ b/src/main/resources/webapp/box-mapall.html
@@ -46,9 +46,9 @@
         // 在地圖上標示台中火車站
         addClickableMarker(taiwanMap.taichung, '台中火車站');
         // 在地圖上標示嘉義火車站
-        addClickableMarker(taiwanMap.chiayi, 'Chiayi Train Station');
+        addClickableMarker(taiwanMap.chiayi, '嘉義火車站');
         // 在地圖上標示高雄火車站
-        addClickableMarker(taiwanMap.kaohsiung, 'Kaohsiung Train Station');
+        addClickableMarker(taiwanMap.kaohsiung, '高雄高鐵站');
         //在地圖上標示行政大樓
         addClickableMarker(taiwanMap.行政大樓, '行政大樓');
         //在地圖上標示工學院一館
