--- a/src/main/resources/webapp/locker-order.html
+++ b/src/main/resources/webapp/locker-order.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Box Detail</title>
+  <title>Locker Detail</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
 <div class="container mt-5" th:fragment="content">
-  <h2 class="mb-4">Box Order</h2>
+  <h2 class="mb-4">Locker Order</h2>
 
   <!-- 表單開始 -->
   <form action="#" method="post" th:object="${box}" th:action="@{/box/update}">
