--- a/src/main/resources/webapp/login.html
+++ b/src/main/resources/webapp/login.html
@@ -5,15 +5,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login Page</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.17.1/font/bootstrap-icons.css" rel="stylesheet">
+  <style>
+    .card-header {
+      background-color: #343a40;
+      color: #FFD306;
+      border-bottom: 1px solid #212529; 
+    }
+
+    .btn-primary {
+      background-color: #343a40;
+      border-color: #343a40; 
+      color: #FFD306; 
+    }
+
+    .btn-primary:hover,
+    .btn-primary:active {
+      background-color: #2c3136;
+      border-color: #2c3136;
+      color: #FFD306; 
+    }
+  </style>
 </head>
 <body>
-
 <div class="container mt-5" th:fragment="content">
   <div class="row justify-content-center">
     <div class="col-md-6">
       <div class="card">
         <div class="card-header">
-          <h3 class="text-center">Login</h3>
+          <h3 class="text-center">
+            <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="#FFD306" class="bi bi-box-seam-fill" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M15.528 2.973a.75.75 0 0 1 .472.696v8.662a.75.75 0 0 1-.472.696l-7.25 2.9a.75.75 0 0 1-.557 0l-7.25-2.9A.75.75 0 0 1 0 12.331V3.669a.75.75 0 0 1 .471-.696L7.443.184l.01-.003.268-.108a.75.75 0 0 1 .558 0l.269.108.01.003 6.97 2.789ZM10.404 2 4.25 4.461 1.846 3.5 1 3.839v.4l6.5 2.6v7.922l.5.2.5-.2V6.84l6.5-2.6v-.4l-.846-.339L8 5.961 5.596 5l6.154-2.461z"/>
+              </svg> 
+            <i class="bi bi-box2-fill" style="color: #FFD306;"></i>
+          </h3>
         </div>
         <div class="card-body">
           <form th:action="@{/login}" th:object="${loginForm}" method="post" onsubmit="return handleLogin()">
@@ -40,12 +65,10 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
-  
   function handleLogin() {
     window.location.href = 'index.html';
     return false; 
   } 
-  
   // function handleLogin() {
   //   const userEmail = document.getElementById('userEmail').value;
   //   localStorage.setItem('userEmail', userEmail);
@@ -63,7 +86,8 @@
     window.location.href = 'index.html';
     return false; //
   }
-</script> -->
+</script> -->  
+
 
 </body>
 </html>
