modify(dev):modify web style

--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -26,6 +26,21 @@
     #sidebar {
       background-color: #343a40 !important;
     }
+
+    .btn.btn-outline-light.dropdown-toggle {
+      color: #343a40;
+      background-color: #343a40;
+      border-color: #343a40;
+    }
+
+    .dropdown-menu {
+      background-color: #343a40;
+      color: #FFD306;
+    }
+
+    .dropdown-item {
+      color: #FFD306 !important;
+    }
   </style>
 </head>
 <body>
