--- a/src/main/resources/webapp/locker-list-all.html
+++ b/src/main/resources/webapp/locker-list-all.html
@@ -5,18 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Locker List</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
   <style>
     .inuse-status { background-color: #28a745; color: #fff; }
     .pending-status { background-color: #ffc107; color: #000; }
     .completed-status { background-color: #007bff; color: #fff; }
     .default-status { background-color: #6c757d; color: #fff; }
     .hidden { display: none; }
+    
+    h2 {
+      font-family: 'Roboto', sans-serif; 
+      font-weight: 700; 
+      color: #FFD306; 
+    }
   </style>
 </head>
 <body>
 
 <div class="container mt-5" th:fragment="content">
-  <h2 class="mb-4">BOX List</h2>
+  <h2 class="mb-4">Locker List</h2>
   <div>
     <table class="table">
       <thead>
