--- a/src/main/resources/webapp/login.html
+++ b/src/main/resources/webapp/login.html
@@ -41,15 +41,15 @@
           </h3>
         </div>
         <div class="card-body">
-          <form th:action="@{/api/user-login}" th:object="${loginForm}" method="post" onsubmit="return handleLogin()">
+          <form th:action="@{/api/user-login}"  method="post" >
             <div class="mb-3">
               <label for="userEmail" class="form-label">Email:</label>
-              <input type="text" class="form-control" th:field="*{userEmail}" required>
+              <input type="text"  name="userEmail" class="form-control"  required>
             </div>
 
             <div class="mb-3">
               <label for="password" class="form-label">Password:</label>
-              <input type="password" class="form-control" th:field="*{password}" required>
+              <input type="password" id="password" name="password" class="form-control"  required>
             </div>
 
             <div class="text-center">
@@ -65,10 +65,10 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
-  function handleLogin() {
+ /*  function handleLogin() {
     window.location.href = 'index.html';
     return false; 
-  } 
+  }  */
   // function handleLogin() {
   //   const userEmail = document.getElementById('userEmail').value;
   //   localStorage.setItem('userEmail', userEmail);
