將box 相關html 改成locker

--- a/src/main/resources/webapp/locker-map-all.html
+++ b/src/main/resources/webapp/locker-map-all.html
@@ -79,9 +79,9 @@
             marker.bindPopup(linkButton).openPopup();
         }
 
-        function goToBoxList(locationName) {
+     /*    function goToBoxList(locationName) {
             window.parent.location.href = `box-list.html?location=${encodeURIComponent(locationName)}`;
-        }
+        } */
     </script>
 </body>
 </html>
