--- a/src/main/resources/webapp/locker-order.html
+++ b/src/main/resources/webapp/locker-order.html
@@ -12,23 +12,18 @@
   <h2 class="mb-4">Locker Order</h2>
 
   <!-- 表單開始 -->
-  <form action="#" method="post" th:object="${box}" th:action="@{/box/update}">
+  <form action="#" method="post" th:object="${box}" th:action="@{/api/appointment}">
     <div class="mb-3">
       <label for="name" class="form-label">名稱:</label>
       <!-- 使用 type="hidden" 讓名稱不可修改 -->
-      <input type="hidden" class="form-control" id="name" th:field="*{name}" required>
+     <input type="hidden" class="form-control" id="boxId" name="boxId" th:value="${box.id}" required>
       <!-- 顯示名稱的文字，用於提示使用者 -->
-      <p class="form-control-static" th:text="*{name}"></p>
+     <p class="form-control-static" th:text="${box.name}"></p>
     </div>
 
-    <div class="mb-3">
+   <div class="mb-3">
       <label for="location" class="form-label">地點:</label>
-      <select class="form-select" id="location" th:field="*{location}" required>
-        <option value="台北車站">台北車站</option>
-        <option value="新竹車站">新竹車站</option>
-        <option value="嘉義車站">嘉義車站</option>
-        <!-- 添加更多地點選項 -->
-      </select>
+      <p class="form-control-static" th:text="${box.location}"></p>
     </div>
 
     <div class="mb-3">
@@ -43,9 +38,7 @@
 
     <div class="mb-3">
       <label for="receiver" class="form-label">取貨方:</label>
-      <select class="form-select" id="receiver" th:field="*{receiver}" required>
-        <option th:each="user : ${users}" th:if="${user.role == 'receiver'}" th:value="${user.id}" th:text="${user.name}"></option>
-      </select>
+     <input type="email" class="form-control" id="receiverEmail" name="receiverEmail" required>
     </div>
 
     <div class="text-center">
