--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Remote Box</title>
+  <!-- 引入 Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- 引入 Roboto 字體 -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+  <!-- CSS 樣式設定 -->
   <style>
     header.bg-dark {
       background-color: #343a40 !important;
@@ -51,15 +54,20 @@
   <!-- Header -->
   <header class="bg-dark text-white text-center py-3">
     <div class="container-fluid">
+      <!-- 頁面標題及用戶資訊區域 -->
       <div class="d-flex justify-content-between align-items-center">
+        <!-- SVG 圖標 -->
         <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="#FFD306" class="bi bi-box-seam-fill" viewBox="0 0 16 16" style="margin-left: 50px;">
           <path fill-rule="evenodd" d="M15.528 2.973a.75.75 0 0 1 .472.696v8.662a.75.75 0 0 1-.472.696l-7.25 2.9a.75.75 0 0 1-.557 0l-7.25-2.9A.75.75 0 0 1 0 12.331V3.669a.75.75 0 0 1 .471-.696L7.443.184l.01-.003.268-.108a.75.75 0 0 1 .558 0l.269.108.01.003 6.97 2.789ZM10.404 2 4.25 4.461 1.846 3.5 1 3.839v.4l6.5 2.6v7.922l.5.2.5-.2V6.84l6.5-2.6v-.4l-.846-.339L8 5.961 5.596 5l6.154-2.461z"/>
         </svg>
+        <!-- 標題 -->
         <h1>Sensor Locker</h1>
+        <!-- 使用者下拉式選單 -->
         <div class="btn-group">
           <button class="btn btn-outline-light" id="userDropdownBtn" data-bs-toggle="dropdown" aria-expanded="false">
            <i class="bi bi-person"></i> <span th:text="${user.email}" id="userDropdownText">${user.email}</span>
           </button>
+          <!-- 使用者下拉式選單內容 -->
           <ul class="dropdown-menu dropdown-menu-end">
             <li><a class="dropdown-item" href="#" id="profileLink" data-user-name="${user.name}" data-user-role="${user.role}">Profile</a></li>
             <li><a class="dropdown-item" href="#" onclick="loadSettings('${user.email}')">Settings</a></li>
@@ -73,22 +81,24 @@
 
   <div class="container-fluid">
     <div class="row">
-
-      <!-- Sidebar -->
+      <!-- 側邊欄 side bar-->
       <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block bg-light sidebar">
         <div class="position-sticky">
           <ul class="nav flex-column">
             <li class="nav-item">
+              <!-- 鏈接至 Locker Map 頁面 -->
               <a class="nav-link active" href="#locker-map-all" onclick="loadContent('locker-map-all')">
                 Locker Map
               </a>
             </li>
             <li class="nav-item">
+              <!-- 鏈接至 Locker List 頁面 -->
               <a class="nav-link active" href="#locker-list-all" onclick="loadContent('locker-list-all')">
                 Locker List
               </a>
             </li>
             <li class="nav-item">
+              <!-- 鏈接至 Locker Order 頁面 -->
               <a class="nav-link active" href="#order-list" th:onclick="'loadContent(\'' + |appointment/user/${user.Id}| + '\')'">
                 Locker Order
               </a>
@@ -97,7 +107,7 @@
         </div>
       </nav>
 
-      <!-- Main Content -->
+      <!-- 主要內容顯示區域 -->
       <main id="main-content" class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
         <div class="container-fluid">
           <iframe id="content-iframe" src="locker-map-all" frameborder="0" width="100%" height="700"></iframe>
@@ -105,9 +115,10 @@
       </main>
     </div>
   </div>
-
+  <!-- 引入 Bootstrap JavaScript 包 -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   
+  <!-- 自定義 JavaScript -->
   <script>
        // $(document).ready(function () {
     //   const userEmail = localStorage.getItem('userEmail');
@@ -116,6 +127,7 @@
     //   }
     // });   
 
+    // 更新使用者資訊
     $(document).ready(function () {
     $.ajax({
       type: 'GET',
@@ -130,22 +142,22 @@
     });
   });  
 
-
+    // 利用 iframe 載入指定的 內容
     function loadContent(contentUrl) {
       document.getElementById('content-iframe').src = contentUrl;
     }
 
-
+    // 載入使用者設定
     function loadSettings(userEmail) {
       window.location.href = `settings.html?userEmail=${userEmail}`;
     }
 
-
+    // 使用者登出
     function logout() {
       window.location.href = 'login.html';
     }
     
-
+    // 使用 Ajax 取得使用者名稱
     function updateUserInfo() {
       updateUserDropdown(userName);
       const userDropdownText = document.getElementById('userDropdownText');
