--- a/src/main/resources/webapp/locker-list.html
+++ b/src/main/resources/webapp/locker-list.html
@@ -17,6 +17,16 @@
       font-weight: 700; 
       color: #FFD306; 
     }
+
+    .idle-status {
+      background-color: #007bff;
+      color: #fff;
+    }
+
+    .inuse-status {
+      background-color: #ffc107;
+      color: #000;
+    }
   </style>
 </head>
 <body>
