--- a/src/main/resources/webapp/order-list.html
+++ b/src/main/resources/webapp/order-list.html
@@ -117,7 +117,7 @@
       };
 
       fetch('/your-backend-endpoint', {
-        method: 'POST',
+        method: 'GET',
         headers: {
           'Content-Type': 'application/json',
         },
