--- a/src/main/resources/webapp/locker-list-all.html
+++ b/src/main/resources/webapp/locker-list-all.html
@@ -22,11 +22,13 @@
     .idle-status {
       background-color: #007bff;
       color: #fff;
+      font-weight: bold;
     }
 
     .inuse-status {
       background-color: #ffc107;
-      color: #000;
+      color:  #fff;
+      font-weight: bold;
     }
   </style>
 </head>
@@ -56,7 +58,7 @@
           </td>
           <td>
           <!--   <span class="badge" th:classappend="${box.status == 'In-use' ? 'inuse-status' : ''} ${box.status == 'Pending' ? 'pending-status' : ''} ${box.status == 'IDLE' ? 'completed-status' : 'default-status'}" th:text="${box.status}"></span> -->
-          	<span class="badge"
+          	<span class="badge rounded"
 							th:class="|${box.status == 'A' ? 'idle-status' : ''} ${box.status == 'UA' ? 'inuse-status' : ''} ${box.status == 'A' ? 'completed-status' : 'default-status'}|"
 							th:text="${box.status == 'A' ? '空閒中' : (box.status == 'UA' ? '使用中' : '其他狀態')}"></span>
             <!-- 如果 box 狀態為 'In-use'，則顯示 user id -->
