--- a/src/main/resources/webapp/locker-list-all.html
+++ b/src/main/resources/webapp/locker-list-all.html
@@ -21,14 +21,14 @@
     
     .idle-status {
       background-color: #007bff;
-      color: #fff;
-      font-weight: bold;
+      color: #fff !important;
+      font-weight: bold !important;
     }
 
     .inuse-status {
       background-color: #ffc107;
-      color:  #fff;
-      font-weight: bold;
+      color:  #fff !important;
+      font-weight: bold !important;
     }
   </style>
 </head>
@@ -66,10 +66,20 @@
           </td>
           <!-- 修改 box 位置的超連結，直接指向 box-map.html -->
           <td>
+            <!-- 判斷 box.status，若為 'UA' 則禁用超連結 -->
+            <a th:href="@{'/api/Boxes/' + ${box.id} + '/location'}"
+               th:if="${box.status != 'UA'}">
+              <button class="btn btn-link" type="button" th:text="${box.location}"></button>
+            </a>
+            <!-- 若為 'UA' 則不產生超連結 -->
+            <span th:unless="${box.status != 'UA'}" th:text="${box.location}"></span>
+          </td>
+<!-- 
+          <td>
              <a th:href="@{'/api/Boxes/' + ${box.id} + '/location'}">
             <button class="btn btn-link" type="button" th:text="${box.location}"></button>
             </a>
-          </td>
+          </td> -->
      <!--     <td th:text="${#dates.format(box.createdTime, 'yyyy-MM-dd HH:mm:ss')}"></td> -->
           <td th:utext="${#temporals.format(box.expiryTime, 'yyyy-MM-dd HH:mm:ss')}"></td>
         </tr>
