--- a/src/main/resources/webapp/locker-map.html
+++ b/src/main/resources/webapp/locker-map.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <!-- 設定文件的基本元素 -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taiwan Map</title>
+    <!-- 引入 Leaflet 地圖樣式 -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <style>
+        /* 設定地圖區域的高度 */
         #map {
             height: 600px;
         }
