--- a/src/main/resources/webapp/login.html
+++ b/src/main/resources/webapp/login.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
+  <!-- 設定基本元素 -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login Page</title>
+  <!-- 引入 Bootstrap 樣式表 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- 引入 Bootstrap Icons 樣式表 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.17.1/font/bootstrap-icons.css" rel="stylesheet">
+  <!-- CSS 樣式設定 -->
   <style>
     .card-header {
       background-color: #343a40;
@@ -29,9 +33,11 @@
 </head>
 <body>
 <div class="container mt-5" th:fragment="content">
+  <!-- 頁面主要內容 -->
   <div class="row justify-content-center">
     <div class="col-md-6">
       <div class="card">
+         <!-- 卡片標頭 -->
         <div class="card-header">
           <h3 class="text-center">
             <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="#FFD306" class="bi bi-box-seam-fill" viewBox="0 0 16 16">
@@ -40,18 +46,23 @@
             <i class="bi bi-box2-fill" style="color: #FFD306;"></i>
           </h3>
         </div>
+        <!-- 卡片主體 -->
         <div class="card-body">
+          <!-- 登入表單 -->
           <form th:action="@{/api/user-login}"  method="post" >
             <div class="mb-3">
+              <!-- 電子郵件輸入欄位 -->
               <label for="userEmail" class="form-label">Email:</label>
               <input type="text"  name="userEmail" class="form-control"  required>
             </div>
 
+             <!-- 密碼輸入欄位 -->
             <div class="mb-3">
               <label for="password" class="form-label">Password:</label>
               <input type="password" id="password" name="password" class="form-control"  required>
             </div>
 
+            <!-- 登入按鈕 -->
             <div class="text-center">
               <button type="submit" class="btn btn-primary">Login</button>
             </div>
@@ -62,6 +73,7 @@
   </div>
 </div>
 
+<!-- 引入 Bootstrap JavaScript library -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
