--- a/src/main/resources/webapp/order-list.html
+++ b/src/main/resources/webapp/order-list.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Order List</title>
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-	rel="stylesheet">
-<link rel="stylesheet"
-	href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
-<style>
-.hidden {
-	display: none;
-}
+	<!-- 設定基本元素 -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Order List</title>
+	<!-- 引入 Bootstrap CSS -->
+	<link
+		href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+		rel="stylesheet">
+	<link rel="stylesheet"
+		href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+	<!-- CSS 樣式設定 -->
+	<style>
+	.hidden {
+		display: none;
+	}
 
-.btn-primary {
-	background-color: #343a40;
-	border-color: #343a40;
-	color: #FFD306;
-}
+	.btn-primary {
+		background-color: #343a40;
+		border-color: #343a40;
+		color: #FFD306;
+	}
 
-h2 {
-	font-family: 'Roboto', sans-serif;
-	font-weight: 700;
-	color: #FFD306;
-}
+	h2 {
+		font-family: 'Roboto', sans-serif;
+		font-weight: 700;
+		color: #FFD306;
+	}
 
-h3 {
-	font-family: 'Roboto', sans-serif;
-	font-weight: 700;
-	color: #FFD306;
-}
-</style>
+	h3 {
+		font-family: 'Roboto', sans-serif;
+		font-weight: 700;
+		color: #FFD306;
+	}
+	</style>
 </head>
 <body>
 
@@ -39,6 +42,7 @@ h3 {
 
 		<div class="row">
 			<div class="col">
+				<!-- 主標題 -->
 				<h2 class="mb-4">Order Locker List</h2>
 			</div>
 		</div>
@@ -46,6 +50,7 @@ h3 {
 		<!-- Upper Div -->
 		<div th:fragment="upper-div" class="mx-auto">
 			<h3 class="text-center">置貨 Locker 清單</h3>
+			<!-- 顯示置貨 Locker 清單的表格 -->
 			<table class="table">
 				<thead>
 					<tr>
@@ -59,7 +64,7 @@ h3 {
 					</tr>
 				</thead>
 				<tbody>
-					<!-- Thymeleaf loop to generate order box list -->
+					<!-- 使用 Thymeleaf 迴圈生成置貨 Locker 清單 -->
 					<tr th:each="orderBox : ${sellerList}">
 						<td th:text="${orderBox.boxName}"></td>
 						<td th:text="${orderBox.location}"></td>
@@ -75,6 +80,7 @@ h3 {
 							<!-- <button type="button" class="btn btn-primary"
 								onclick="confirmActionSend('${orderBox.id}', '${orderBox.name}', '${orderBox.location}', '${orderBox.status}', '${orderBox.supplierEmail}', '${orderBox.recipientEmail}')">取貨完成</button>
 				 -->
+				 <!-- 按鈕以確認完成置貨動作 -->
 				 <button type="button" class="btn btn-primary btn-custom"
 								th:onclick="'confirmActionReceiver(\'' + ${orderBox.appointmentId} + '\')'">取貨完成</button>		
 				 </td>
@@ -90,6 +96,7 @@ h3 {
 		<!-- Lower Div -->
 		<div th:fragment="lower-div" class="mx-auto">
 			<h3 class="text-center">取貨 Locker 清單</h3>
+			<!-- 顯示取貨 Locker 清單的表格 -->
 			<table class="table">
 				<thead>
 					<tr>
@@ -103,7 +110,7 @@ h3 {
 					</tr>
 				</thead>
 				<tbody>
-					<!-- Thymeleaf loop to generate order box list -->
+					<!-- 使用 Thymeleaf 迴圈生成取貨 Locker 清單 -->
 					<tr th:each="orderBox : ${buyerList}">
 						<td th:text="${orderBox.boxName}"></td>
 						<td th:text="${orderBox.location}"></td>
@@ -123,10 +130,12 @@ h3 {
 		</div>
 	</div>
 
+	<!-- 引入 Bootstrap JavaScript -->
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 	<script th:inline="javascript">
+  //處理置貨者確認動作
   function confirmActionSend(id, name, location, status, supplierEmail, recipientEmail) {
     if (confirm('確認要取貨嗎？')) {
       const requestData = {
@@ -138,6 +147,7 @@ h3 {
         recipientEmail: recipientEmail
       };
 
+	  // 發送 GET 請求至 backend
       fetch('/your-backend-endpoint', {
         method: 'GET',
         headers: {
@@ -157,9 +167,11 @@ h3 {
     }
   }
 
+  // 處理取貨者確認動作
   function confirmActionReceiver(id) {
 	  if (confirm('確認要取貨嗎？')) {
 		  alert('取貨成功！');
+		  // 導向至指定的完成端點，使用預約 ID
 		  window.location.href = '/api/appointment/' + id + '/complete';
 	  }
 	}
